--- a/index.html
+++ b/index.html
@@ -1,58 +1,85 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+	  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<script src="https://trigger.io/catalyst/target/target-script-min.js#B1D26EB1-2D5A-4235-94A6-529CB9553523"></script>
 		<script type="text/javascript" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/mustache.min.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/weather.js"></script>
 	</head>
 	<body>
-		<script type="x-mustache-template" id="forecast_information_tmpl">
-			<h1>Forecast for {{display_location.full}}</h1>
-			<p>{{observation_time}}</p>
-		</script>
+	  <div id="nav" class="navbar navbar-default navbar-fixed-top" style="display:none">
+  	  <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Here 'n' Now</a>
+        </div><!-- /.navbar-header -->
+        <div class="navbar-collapse collapse navbar-responsive-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Settings</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">About</a></li>
+          </ul>
+        </div><!-- /.nav-collapse -->
+      </div><!-- /.container -->
+    </div><!-- /.navbar -->
 
-		<script type="x-mustache-template" id="current_conditions_tmpl">
-			<table>
-				<tr>
-					<td><img src="{{icon_url}}" /></td>
-					<td>
-						<div>{{weather}}</div>
-						<div>{{temp_f}}&deg;F</div>
-						<div>Humidity: {{relative_humidity}}</div>
-						<div>Wind: {{wind_string}}</div>
-					</td>
-				</tr>
-			</table>
-		</script>
+    <div class="container">
+	  
+      <script type="x-mustache-template" id="forecast_information_tmpl">
+        <div class="page-header" id="banner">
+          <div class="row">
+            <div class="col-lg-12">
+      			  <h1>Weather</h1>
+      			  <p>{{display_location.full}}</p>
+        			<p>{{observation_time}}</p>
+            </div>
+          </div>
+        </div>
+  		</script>
+
+  		<script type="x-mustache-template" id="current_conditions_tmpl">
+        <div class="row">
+          <div class="col-lg-1">
+  					<img src="{{icon_url}}" />
+  				</div>
+          <div class="col-lg-2">
+  						<div>{{weather}}</div>
+  						<div>{{temp_f}}&deg;F</div>
+  						<div>Humidity: {{relative_humidity}}</div>
+  						<div>Wind: {{wind_string}}</div>
+  				</div>
+  			</div>
+  		</script>
 		
-		<script type="x-mustache-template" id="forecast_conditions_tmpl">
-			{{#forecastday}}
-			<td>
-				<h2>{{date.weekday_short}}</h2>
-				<img src="{{icon_url}}">
-				<div>{{conditions}}</div>
-				<div>Low: {{low.fahrenheit}}&deg;F</div>
-				<div>High: {{high.fahrenheit}}&deg;F</div>
-			</td>
-			{{/forecastday}}
-		</script>
+  		<script type="x-mustache-template" id="forecast_conditions_tmpl">
+  			{{#forecastday}}
+  			<td>
+  				<h2>{{date.weekday_short}}</h2>
+  				<img src="{{icon_url}}">
+  				<div>{{conditions}}</div>
+  				<div>Low: {{low.fahrenheit}}&deg;F</div>
+  				<div>High: {{high.fahrenheit}}&deg;F</div>
+  			</td>
+  			{{/forecastday}}
+  		</script>
 		
-		<header id="forecast_information"></header>
+  		<header id="forecast_information"></header>
 
-		<section id="current_conditions"></section>
+  		<section id="current_conditions"></section>
 
-		<section id="forecast_conditions">
-			<table>
-				<tr>
-				</tr>
-			</table>
-		</section>
-
-		<div id="options">
-			<div id="options_header">Select City</div>
-			<select id="city_menu"></select>
-		</div>
+  		<div id="options">
+  			<div id="options_header">Select City</div>
+  			<select id="city_menu"></select>
+  		</div>
+	  </div><!-- /.container -->
+  	
 	</body>
 </html>
