cleanup from end of last session; upgraded triger version; added boottheme folder to tree

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="js/mustache.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/weather.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 	  <div id="nav" class="navbar navbar-default navbar-fixed-top">
@@ -20,7 +21,7 @@
           </button>
           <a id="nav-home" class="navbar-brand" href="#" class="active">Here and Now&nbsp;&nbsp;&nbsp;&nbsp;</a>
         </div><!-- /.navbar-header -->
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
+        <div id="nav-collapse" class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li><a id="nav-settings" href="#">Settings</a></li>
           </ul>
